[package]
name = "keen-retry"
version = "0.2.1"
edition = "2021"
description   = "A simple -- yet powerful -- zero-cost-abstractions & zero-copy lib for error handling & recovery"
keywords      = ["functional", "zero-copy", "zero-cost", "async", "performance"]
categories    = ["asynchronous", "production", "rust-patterns"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/keen-retry"
repository    = "https://github.com/zertyz/keen-retry"
documentation = "https://docs.rs/keen-retry/"
license       = "Unlicense"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
thiserror = "1.0"
