[package]
name = "keen-retry"
version = "0.4.1"
edition = "2021"
description   = "A simple -- yet powerful -- zero-cost-abstractions & zero-copy lib for error handling & recovery"
keywords      = ["functional", "zero-copy", "zero-cost", "async", "performance"]
categories    = ["asynchronous", "network-programming", "rust-patterns"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/keen-retry"
repository    = "https://github.com/zertyz/keen-retry"
documentation = "https://docs.rs/keen-retry/"
license       = "Unlicense"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[features]
default = ["async"]
async = ["tokio", "futures"]
no-async = []


[dependencies]
log = "0.4"
rand = "0.8"
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "time", "macros"], optional = true }


[dev-dependencies]
ctor          = "0.2"    # setup and teardown for modules
simple_logger = "4.0"    # a dirty console logger
thiserror     = "1.0"


# dependencies for benchmarks
#############################

criterion = { version = "0.5", features=["html_reports"] }

[[bench]]
name = "zero_cost_abstractions"
harness = false
