[package]
name = "keen-retry"
version = "0.5.1"
edition = "2021"
description   = "A simple -- yet powerful -- zero-cost-abstractions & zero-copy lib for error handling & recovery"
keywords      = ["functional", "zero-copy", "zero-cost", "async", "performance"]
categories    = ["asynchronous", "network-programming", "rust-patterns"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/keen-retry"
repository    = "https://github.com/zertyz/keen-retry"
documentation = "https://docs.rs/keen-retry/"
license       = "Unlicense"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[features]
default = ["async"]
async = ["tokio", "futures"]
no-async = []


[dependencies]
futures = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["time"], optional = true }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }    # for the exponential jitter


[dev-dependencies]
tokio         = { version = "1", features = ["rt", "time", "macros"] }
ctor          = "0.5"    # setup and teardown for modules
log           = "0.4"
simple_logger = "4.3"    # a dirty console logger
thiserror     = "2"


# dependencies for benchmarks
#############################

criterion = { version = "0.7", features=["html_reports"] }

[[bench]]
name = "zero_cost_abstractions"
harness = false
